--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "@types/node": "^10.12.18",
     "axios": "^0.18.0",
+    "decamelize": "^2.0.0",
     "fs-extra": "^7.0.1",
+    "simple-git": "^1.107.0",
     "ts-loader": "^5.3.2",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
