--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "mocka",
-    "run": "node -r ts-node/register src/index.ts"
+    "h5p-dependency-getter": "node -r ts-node/register src/index.ts"
   },
   "repository": {
     "type": "git",
