ability to get only one library and all it's dependencies

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "mocka",
-    "h5p-dependency-getter": "node -r ts-node/register src/index.ts"
+    "h5p-dependency-getter": "node -r ts-node/register src/index.ts",
+    "get-weblate": "node -r ts-node/register src/get-all.ts"
+
   },
   "repository": {
     "type": "git",
